--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .gradle/
 .mcreator/
+.settings/
 build/
 gradle/
 run/
@@ -8,4 +9,4 @@ gradlew.bat
 build.gradle
 mcreator.gradle
 .classpath
-.settings/
+.project
